# tgwallet

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt
tgwallet/: __init__.py
tgwallet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tgwallet/client/: __init__.py  client.py
tgwallet/exceptions/: __init__.py  exceptions.py
tgwallet/models/: __init__.py  models.py
tgwallet/types/: __init__.py  enums.py
